--- a/index.html
+++ b/index.html
@@ -3,7 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="DevConnect" />
+    <meta
+      name="description"
+      content="Where developers post, comment, and follow seamlessly. Join now to amplify your coding experience."
+    />
+    <meta name="copyright" content="Biswajeet Sutar" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mydevconnect.vercel.app/" />
+    <meta property="og:title" content="DevConnect" />
+    <meta
+      property="og:description"
+      content="Where developers post, comment, and follow seamlessly. Join now to amplify your coding experience."
+    />
+    <meta
+      property="og:image"
+      content="http://res.cloudinary.com/dpu5ywrox/image/upload/v1699735594/uls0risl2npkm2k3tpbm.png"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mydevconnect.vercel.app/" />
+    <meta property="twitter:title" content="DevConnect" />
+    <meta
+      property="twitter:description"
+      content="Where developers post, comment, and follow seamlessly. Join now to amplify your coding experience."
+    />
+    <meta
+      property="twitter:image"
+      content="http://res.cloudinary.com/dpu5ywrox/image/upload/v1699735594/uls0risl2npkm2k3tpbm.png"
+    />
     <title>DevConnect</title>
   </head>
 
